--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@nuxt/types": "^2.15.8",
     "@tailwindcss/forms": "^0.5.3",
     "extract-colors": "^2.0.4",
+    "https-proxy-agent": "^5.0.1",
     "lru-cache": "^7.14.1",
     "node-vibrant": "3.2.1-alpha.1",
     "ofetch": "^1.0.0",
