--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "typescript": "^4.9.5"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.12",
     "@heroicons/vue": "^2.0.13",
     "@nuxt/types": "^2.15.8",
     "@tailwindcss/forms": "^0.5.3",
